# python-streamlit-flask-google-photo-copier

./: .env.example  .gitignore  ACTION_REQUIRED.md  GITHUB_ISSUES.md  IMPLEMENTATION_SUMMARY.md  ISSUES_SUMMARY.md  ISSUE_CREATION_GUIDE.md  ISSUE_MIGRATE_TO_PICKER_API.md  Makefile  OAUTH_TROUBLESHOOTING.md  README.md  README_ISSUE_CREATION.md  SECURITY.md  SECURITY_HARDENING_SUMMARY.md  SETUP.md  VERIFICATION_REPORT.md  create-issues.sh  create_github_issues.py  demo_i18n.py  issues.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_oauth_flow.py  validate-requirements.sh  verify-setup.sh
.github/: copilot-instructions.md
.github/workflows/: README.md  ci.yml
docs/: I18N.md  OAUTH_SETUP.md  architecture.md  user_guide.md
src/google_photos_sync/: __init__.py  config.py
src/google_photos_sync/api/: __init__.py  app.py  middleware.py  routes.py
src/google_photos_sync/core/: __init__.py  compare_service.py  sync_service.py  transfer_manager.py
src/google_photos_sync/google_photos/: __init__.py  auth.py  client.py  models.py
src/google_photos_sync/i18n/: __init__.py  translator.py
src/google_photos_sync/i18n/locales/: en.json  it.json
src/google_photos_sync/ui/: __init__.py  app.py
src/google_photos_sync/ui/components/: __init__.py  auth_component.py  compare_view.py  confirmation_dialog.py  language_selector.py  status_component.py  sync_view.py
src/google_photos_sync/utils/: __init__.py  credential_encryption.py  logging_config.py  validators.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_sync_workflow.py
tests/integration/: __init__.py  test_api_routes.py  test_flask_app.py
tests/unit/: __init__.py  test_compare_service.py  test_credential_encryption.py  test_google_photos_auth.py  test_google_photos_client.py  test_i18n.py  test_setup.py  test_sync_service.py  test_transfer_manager.py  test_validators.py
